[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bitspec"
authors = [{name = "amtal"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT (https://opensource.org/licenses/MIT)"}
classifiers = [
    "Topic :: Software Development :: Disassemblers",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://amtal.github.io/bitspec"
Source = "https://github.com/amtal/bitspec"
Issues = "https://github.com/amtal/bitspec/issues"
